fixed controls on mobile

--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -132,8 +132,8 @@ input[type='color'] {
 
 .cp_wrapper {
   overflow: hidden;
-  width: 2em;
-  height: 2em;
+  width: 24px;
+  height: 24px;
   /* optional formatting below here */
   border-radius: 50%;
   box-shadow: 1px 1px 3px 0px gray;
@@ -165,3 +165,63 @@ input[type='color'] {
 .after-picker {
   margin-left: 30px;
 }
+
+input[type="checkbox"] {
+  /* Add if not using autoprefixer */
+  -webkit-appearance: none;
+  /* Remove most all native input styles */
+  appearance: none;
+  /* For iOS < 15 */
+  background-color: rgb(76, 76, 76);
+  /* Not removed via appearance */
+  margin: 0;
+
+  font: inherit;
+  color: rgb(176, 176, 176);
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.1em solid rgb(176, 176, 176);
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+
+  display: grid;
+  place-content: center;
+  margin-left: 5px;
+  margin-bottom: 8px;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  transform: scale(0);
+  transform-origin: center center;
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em white;
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
+
+/* input[type="checkbox"]:focus {
+  outline: max(2px, 0.15em) solid currentColor;
+  outline-offset: max(2px, 0.15em);
+} */
+
+.checkbox-container {
+  display: inline-flex;
+}
+
+#slow-field {
+  margin-left: -1px;
+}
+
+.title {
+  font-size: 27px;
+  font-weight: 700;
+  padding: 20px 0 10px 20px;
+  color:rgb(220, 220, 220)
+}
+
